--- a/ui/app/css/itcss/settings/typography.scss
+++ b/ui/app/css/itcss/settings/typography.scss
@@ -1,6 +1,11 @@
 @import url('./fonts/Font_Awesome/font-awesome.min.css');
 
 @font-face {
+  font-family: 'Circular';
+  src: url('fonts/Circular/CircularXXWebTest-Regular.woff') format('woff');
+}
+
+@font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 100;
