--- a/ui/app/css/itcss/generic/index.scss
+++ b/ui/app/css/itcss/generic/index.scss
@@ -10,7 +10,7 @@
 
 html,
 body {
-  font-family: Roboto, Arial;
+  font-family: Circular, Arial;
   color: #4d4d4d;
   font-weight: 400;
   background: #f7f7f7;
