--- a/ui/app/css/itcss/settings/variables.scss
+++ b/ui/app/css/itcss/settings/variables.scss
@@ -231,7 +231,7 @@ $xxlarge-spacing: 64px;
 // Font mixin
 
 %font {
-  font-family: Roboto;
+  font-family: Circular;
   font-style: normal;
   font-weight: normal;
   color: $Grey-800;
